--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "typescript": "~3.8.3",
+    "vue-cli-plugin-tailwind": "~1.4.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
